# auto-clicker

./: .eslintignore  .eslintrc.json  .gitignore  .mise.toml  .prettierignore  MIGRATION.md  README.md  ROADMAP.md  cli.js  cli.ts  get_scancode.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json
.github/workflows/: build-release.yml
assets/: README.md
docs/: GAMING_GUIDE.md  RECORDING_GUIDE.md
electron/: main.js  main.ts  preload.js  preload.ts
electron/core/: clickerController.ts  leagueHelper.ts  mouseMovement.ts  recordingController.ts  sequenceStore.ts  types.ts  vision.ts
renderer/: app.js  app.ts  index.html  output.css  styles.css
src/auto_clicker/: __init__.py  __main__.py  cli.py  config.py  engine.py  gui.py
src/auto_clicker/tools/: __init__.py  scancode.py
tools/: scancode.js  scancode.ts
