[tool.poetry]
name = "auto-clicker"
version = "0.0.2"
description = "An auto clicker for a variety of tasks"
authors = ["Arvid Berndtsson <arvid@dotarvid.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "auto_clicker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
PyAutoGUI = "^0.9.54"
keyboard = "^0.13.5"
typer = "^0.12.5"
rich = "^14.2.0"
shellingham = "^1.5.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.11.0", python = ">=3.11,<3.14" }

[tool.poetry.scripts]
auto-clicker = "auto_clicker.cli:entrypoint"
auto-clicker-gui = "auto_clicker.gui:launch_gui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
